[package]
name = "rust-cross-uname"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version="0.29.0", features=["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"]}